<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">

    <android.widget.Button
            android:layout_height="70px"
            android:layout_width="fill_parent"
            android:text="@string/homeLocationButtonName"
            android:hint="@string/homeLocationButtonHint"
            android:layout_marginBottom="20px"
            />

    <android.widget.EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/locationTextFieldValue"
            android:enabled="false"/>

    <android.widget.Button
            android:layout_height="70px"
            android:layout_width="fill_parent"
            android:text="@string/goHomeButtonName"
            android:hint="@string/goHomeButtonHint"
            android:layout_marginTop="20px"
            />

</LinearLayout>